--- a/style.css
+++ b/style.css
@@ -199,108 +199,108 @@ header {
     z-index: -1;
 }
 
-    .skills-container {
-        margin-top: 30vh;
+.skills-container {
+    margin-top: 30vh;
 
-        h2 {
-            padding-bottom: 35px;
+    h2 {
+        padding-bottom: 35px;
+        flex: 1;
+        align-items: center;
+        justify-items: center;
+        justify-content: left;
+        text-align: left;
+        font-size: 30px;
+    }
+
+    .skills-table {
+        display: grid;
+        grid-template-columns: repeat(3, minmax(23rem, 1fr));
+        grid-gap: 2rem;
+        width: 100vh;
+
+        .left-column {
             flex: 1;
-            align-items: center;
-            justify-items: start;
-            justify-content:left;
-            text-align: left;
-            font-size: 30px;
-        }
+            align-items: end;
+            display: flex;
+            flex-direction: column;
 
-        .skills-table {
-            display: grid;
-            grid-template-columns: repeat(2, minmax(15rem, 1fr));
-            grid-gap: 2rem;
-            justify-content: center;
-            align-items: center;
-            justify-items: center;
-            .left-column {
-                flex: 1;
-                justify-content: end;
-                justify-items: end;
-                align-items: end;
+            .bar1 {
                 display: flex;
-                flex-direction: column;
-                .bar1 {
-                    display: flex;
-                    gap: 20px;
-                    align-items: center;
-                    justify-items: center;
-                    text-align: center;
-                    padding-bottom: 25px;
-                    font-size: 18px;
-                }
-                .skill1 {
-                    display: flex;
-                    justify-items: center;
-                    text-align: center;
-                    justify-content: center;
-                }
+                gap: 20px;
+                align-items: center;
+                justify-items: center;
+                text-align: center;
+                padding-bottom: 25px;
+                font-size: 16px;
+            }
+
+            .skill1 {
+            }
+
+            .notactive {
+                visibility: hidden;
             }
         }
-
-        .skills-h1 {
-            font-size: 120px;
-            text-transform: uppercase;
-            font-weight: 100;
-            letter-spacing: 25px;
-            padding-left: 90px;
-            width: 355px;
-            height: 3px;
-            background: black;
-            display: flex;
-            justify-content: start;
-            align-items: end;
-            margin-bottom: 150px;
-
-        }
-        .progress-title {
-            display: inline-block;
-            text-align: end;
-            font-size: 13px;
-        }
-
-        .progress-container {
-            margin-top: 6px;
-            width: 25vh;
-            border-radius: 50px;
-            overflow: hidden;
-            outline-style: solid;
-            outline-width: 2px;
-        }
-
-        .progress-bar-25 {
-            width: 25%; /* Adjust this value to change the progress */
-            height: 25px;
-            background-color: black;
-            text-align: center;
-            line-height: 30px;
-            color: white;
-
-        }
-
-        .progress-bar-50 {
-            width: 50%; /* Adjust this value to change the progress */
-            height: 25px;
-            background-color: black;
-            text-align: center;
-            line-height: 30px;
-            color: white;
-
-        }
-
-        .progress-bar-75 {
-            width: 75%; /* Adjust this value to change the progress */
-            height: 25px;
-            background-color: black;
-            text-align: center;
-            line-height: 30px;
-            color: white;
-
-        }
     }
+
+    .skills-h1 {
+        font-size: 120px;
+        text-transform: uppercase;
+        font-weight: 100;
+        letter-spacing: 25px;
+        padding-left: 90px;
+        width: 355px;
+        height: 3px;
+        background: black;
+        display: flex;
+        justify-content: start;
+        align-items: end;
+        margin-bottom: 50px;
+
+    }
+
+    .progress-title {
+        display: inline-block;
+        text-align: end;
+        font-size: 13px;
+    }
+
+    .progress-container {
+        margin-top: 6px;
+        width: 20vh;
+        border-radius: 50px;
+        overflow: hidden;
+        outline-style: solid;
+        outline-width: 1px;
+    }
+
+    .progress-bar-25 {
+        width: 25%; /* Adjust this value to change the progress */
+        height: 10px;
+        background-color: black;
+        text-align: center;
+        line-height: 30px;
+        color: white;
+
+    }
+
+    .progress-bar-50 {
+        width: 50%; /* Adjust this value to change the progress */
+        height: 10px;
+        background-color: black;
+        text-align: center;
+        line-height: 30px;
+        color: white;
+
+    }
+
+    .progress-bar-75 {
+        width: 75%; /* Adjust this value to change the progress */
+        height: 25px;
+        background-color: black;
+        text-align: center;
+        line-height: 30px;
+        color: white;
+
+    }
+}
