--- a/style.css
+++ b/style.css
@@ -2,9 +2,30 @@
     box-sizing: border-box;
     margin: 0;
 }
+/* This rule applies to all elements */
+* {
+    color: var(--text-color) !important;
+}
+
+/* Override default link colors */
+a, a:visited, a:hover, a:active {
+    color: var(--text-color);
+}
 
 :root {
     --primary: #000000;
+    --background-color: #F9F9F9;
+    --text-color: red;
+    --color:white;
+
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --background-color: #141414;
+        --text-color: white;
+        --color:white;
+    }
 }
 
 a {
@@ -12,7 +33,8 @@ a {
 }
 
 body {
-    background: #F9F9F9;
+    background-color: var(--background-color);
+    color: var(--text-color);
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
@@ -28,7 +50,7 @@ header {
         width: 120px;
         height: auto;
     }
-
+    color: var(--text-color);
     padding-top: 10px;
     padding-bottom: 10px;
     display: flex;
@@ -50,10 +72,10 @@ header {
                 a {
                     margin: 10px 20px;
                     padding-bottom: 5px;
-                    color: black;
+                    color: var(--color);
 
                     &:hover {
-                        border-bottom: black solid 3px;
+                        border-bottom: var(--text-color) solid 3px;
                         font-weight: 500;
                     }
                 }
@@ -91,7 +113,7 @@ header {
         position: absolute;
         width: 550px;
         height: 550px;
-        background: white;
+        background: var(--background-color);
         -moz-border-radius: 50%;
         -webkit-border-radius: 50%;
         border-radius: 50%;
@@ -150,15 +172,15 @@ header {
     margin-right: 20px;
     display: inline-block;
     text-decoration: none;
-    color: black;
+    color: var(--text-color);
     padding-bottom: 3px;
-    border-bottom: black solid 1px;
+    border-bottom: var(--text-color) solid 1px;
     font-size: 16px;
     font-weight: 300;
 
     &:hover {
         font-weight: 500;
-        border-bottom: black solid 1px;
+        border-bottom: var(--text-color) solid 1px;
 
     }
 }
@@ -166,7 +188,7 @@ header {
 .active {
     margin: 10px 20px;
     padding-bottom: 5px;
-    border-bottom: black solid 3px;
+    border-bottom: var(--text-color) solid 3px;
     font-weight: 500;
 }
 
@@ -197,110 +219,4 @@ header {
     top: 80%;
     right: -40px;
     z-index: -1;
-}
-
-.skills-container {
-    margin-top: 30vh;
-
-    h2 {
-        padding-bottom: 35px;
-        flex: 1;
-        align-items: center;
-        justify-items: center;
-        justify-content: left;
-        text-align: left;
-        font-size: 30px;
-    }
-
-    .skills-table {
-        display: grid;
-        grid-template-columns: repeat(3, minmax(23rem, 1fr));
-        grid-gap: 2rem;
-        width: 100vh;
-
-        .left-column {
-            flex: 1;
-            align-items: end;
-            display: flex;
-            flex-direction: column;
-
-            .bar1 {
-                display: flex;
-                gap: 20px;
-                align-items: center;
-                justify-items: center;
-                text-align: center;
-                padding-bottom: 25px;
-                font-size: 16px;
-            }
-
-            .skill1 {
-            }
-
-            .notactive {
-                visibility: hidden;
-            }
-        }
-    }
-
-    .skills-h1 {
-        font-size: 120px;
-        text-transform: uppercase;
-        font-weight: 100;
-        letter-spacing: 25px;
-        padding-left: 90px;
-        width: 355px;
-        height: 3px;
-        background: black;
-        display: flex;
-        justify-content: start;
-        align-items: end;
-        margin-bottom: 50px;
-
-    }
-
-    .progress-title {
-        display: inline-block;
-        text-align: end;
-        font-size: 13px;
-    }
-
-    .progress-container {
-        margin-top: 6px;
-        width: 20vh;
-        border-radius: 50px;
-        overflow: hidden;
-        outline-style: solid;
-        outline-width: 1px;
-    }
-
-    .progress-bar-25 {
-        width: 25%; /* Adjust this value to change the progress */
-        height: 10px;
-        background-color: black;
-        text-align: center;
-        line-height: 30px;
-        color: white;
-
-    }
-
-    .progress-bar-50 {
-        width: 50%; /* Adjust this value to change the progress */
-        height: 10px;
-        background-color: black;
-        text-align: center;
-        line-height: 30px;
-        color: white;
-
-    }
-
-    .progress-bar-75 {
-        width: 75%; /* Adjust this value to change the progress */
-        height: 25px;
-        background-color: black;
-        text-align: center;
-        line-height: 30px;
-        color: white;
-
-    }
 }
