--- a/style.css
+++ b/style.css
@@ -2,6 +2,20 @@
     box-sizing: border-box;
     margin: 0;
 }
+
+@media (min-width: 600px) {
+    .navbar {
+        justify-content: space-between;
+    }
+    .navbar a {
+        display: block;
+    }
+}
+@media (max-width: 599px) {
+    .navbar a {
+        display: none;
+    }}
+
 /* This rule applies to all elements */
 * {
     color: var(--text-color) !important;
